web/app/assets/stylesheets/style.sass
@import "reset"
@import "var"

.bg-green
  background-color: $green

.bg-orange
  background-color: $orange

.bg-white
  background-color: $white

.bg-blue
  background-color: $blue-light

.bg-red
  background-color: $red

.bg-gray
  background-color: $gray

.txt-green-light
  color: $green-light

.txt-green
  color: $green

.txt-orange-light
  color: $orange-light

.txt-orange
  color: $orange

.txt-white
  color: $white

.txt-black
  color: $black-light

.txt-gray
  color: $gray-dark

.txt-blue
  color: $blue-light

.txt-red
  color: $red

.mg-top-15
  margin-top: 15px

.mg-top-50
  margin-top: 30px

body
  font-family: $helvetica
  color: $black-light
  background-color: $black

p
  font-size: 14px
  line-height: 16px

h1
  font-size: 32px
  font-weight: 400
  line-height: 48px
  @include media(xs)
    font-size: 30px

h2
  font-size: 28px
  font-weight: 400
  @include media(xs)
    text-align: center
    font-size: 20px
    font-weight: 500

h3
  font-size: 18px
  font-weight: 600
  margin-bottom: 30px
  @include media(xs)
    align-items: flex-start

svg
  fill: $gray-medium

label
  font-size: 18px
  color: $gray-dark
  text-indent: 10px
  line-height: 26px

.form-control
  height: 50px
  border: none
  background-color: $gray-light
  text-indent: 12px
  font-size: 18px
  font-weight: 800
  color: $blue
  box-shadow: none

input
  padding-left: 8px
  
input[type=checkbox]
  display: none
  + label
    position: relative
    background: url("../images/icon-checkbox.svg") no-repeat
    height: 50px
    width: 50px
    display: block
    border-radius: 50%
    transition: box-shadow 0.2s, border 0.2s
    border: solid 3px $white
    box-shadow: 0 0 1px $white
    cursor: pointer
    &:hover
      border: solid 1px $blue-light
      box-shadow: 0 0 1px $blue-light
  &:checked + label
    background: url("../images/icon-checkbox-checked.svg") no-repeat
    border: solid 1px $blue-light
    box-shadow: 0 0 1px $blue-light
    &:after
      content: ''
      height: 1em
      position: absolute
      top: 0
      left: 0
      bottom: 0
      right: 0
      margin: auto
      color: $blue-light
      line-height: 1
      font-size: 18px
      text-align: center

.btn
  height: 50px
  border: none
  background-color: $blue-light
  color: $white
  font-size: 18px
  font-weight: 800
  &:hover
    background-color: $gray
    color: $blue-light

.btn-disabled, .btn-disabled:hover
  background-color: $gray !important
  color: $gray-medium !important

#checkbox
  margin-left: 28px

//RSVP
#main-container
  background: url("../images/asics-athlete.jpg") $gray no-repeat center
  background-size: cover
  height: 100%
  padding-top: 100px

.qrcode-container
  margin-bottom: 15px
  qrcode
    margin: 0 auto

#rsvp-header
  padding: 5px
  border-bottom: solid 1px $gray
  img
    height: 140px
    margin: 0 auto

//ADMIN
#admin-container
  height: 100%

#admin-header
  padding: 25px
  img
    display: block
    height: 30px
    margin: 0 auto

#admin-content
  background-color: $gray-light
  border-radius: $border-radius
  height: 85vh
  max-height: 85vh

.nav-tabs
  float: left
  border-bottom: 0
  svg
    fill: $gray-dark
  li:first-child
    border-top-left-radius: $border-radius
  li
    float: none
    margin: 0
    padding: 5px
    border-bottom: 1px solid $gray
    &:hover
      background-color: $gray
    a
      margin-right: 0
      border: 0
      color: $gray-dark
      text-align: center
      &:hover, &:active, &:visited, &:link
        background-color: transparent
      svg
        margin: 0 auto
        height: 40px

.default-tab
  background-color: $gray-light

.arrow-right
  display: none

.active-tab
  background-color: $blue-light
  &:hover
    background-color: $blue-light !important
  a div
    color: $white
  a svg
    fill: $white
  .arrow-right
    display: block
    width: 0
    height: 0
    border-top: 9px solid transparent
    border-bottom: 9px solid transparent
    border-left: 9px solid $blue-light
    position: absolute
    right: -9px
    top: 14px

.tab-content
  .tab-pane
    display: none
    border-bottom-right-radius: $border-radius
    border-top-right-radius: $border-radius
    background-color: $white
    padding: 0
    min-height: 85vh
    overflow: hidden
  .active
    display: block

.counter-card
  border-radius: $border-radius
  width: 30%
  height: 90px
  padding: 0
  margin: 2px 10px
  cursor: pointer
  animation: increase ease 0.2s
  transition: height $anim-duration, padding $anim-duration
  @include media(xs)
    width: 95%
  h1
    font-size: 40px
    transition: font-size $anim-duration

  .counter-card-top
    padding: 10px 20px
    span
      font-size: 14px
      margin-left: 10px
      line-height: 0

  .counter-card-bottom
    opacity: 0
    border-top: 1px solid $gray
    padding: 10px 20px
    div
      font-size: 10px

  .counter-card-athlete
    border-top: 1px solid $green-dark

  .counter-card-guest
    border-top: 1px solid $orange-dark

.card-open
  padding-top: 18px
  height: 160px
  h1
    font-size: 54px

  .counter-card-bottom
    opacity: 1
    transition: opacity 1s

.search-container
  height: 36px
  border-bottom: 1px solid $gray
  padding: 5px 25px
  .input-group
    position: absolute
    right: 60px
    background-color: $gray-light
    border-radius: 30px
    width: 258px
  input
    height: 25px
    line-height: 25px
    border-radius: 30px
    border: none
    background-color: $gray-light
    width: 230px !important
    -webkit-box-shadow: none !important
    box-shadow: none !important
  svg
    position: absolute
    top: 5px
    display: inline-block
    height: 15px

#admin-form-language
  width: 115px
  float: right

#admin-form-email
  width: 82%
  @include media(sm)
    width: 80%

#admin-form-name, #admin-form-athlete-name
  float: right
  width: 80%
  @include media(md)
    width: 83%
  @include media(sm)
    width: 82%

#admin-form-checkbox
  position: fixed
  width: 145px

#admin-form-button
  position: absolute
  bottom: 12vh
  button
    margin-left: 29%
    width: 205px
  
.help-block p
  font-size: 12px
  color: $red


//GUESTS
#guests-container
  max-height: 62vh
  padding-top: 21px
  overflow-y: scroll
  overflow-x: hidden
  transition: max-height $anim-duration
  @media (max-height: 720px)
    max-height: 58vh
  @media (max-height: 630px)
    max-height: 56vh

.guest-card-open
  max-height: 54vh !important

#guests-top
  padding: 20px

#guests-bottom
  height: 100%

.guest-container, .log-container
  padding: 15px 20px
  border-bottom: 1px solid $gray-light
  &:hover
    background-color: $gray-light
    button.guest-action-container
      div
        display: block
      svg
        fill: $blue-light
        transition: fill $anim-duration
      svg.svg-block
        fill: $red
        transition: fill $anim-duration
      span.svg-badge, span.svg-qrcode
        color: $blue-light
        transition: color $anim-duration

.guest-picture
  svg
    height: 46px
    margin: 4px
  .picture-border
    background: url("../images/icon-user-border.svg#svg-user-border") no-repeat
    background-size: cover
    width: 54px
    height: 54px

.guest-info
  margin-left: 15px
  width: 42%
  @include media(md)
    width: 44%
  .guest-name
    font-size: 15px
    font-weight: 800
    color: $black-light

  .guest-email
    font-size: 10px
    line-height: 7px
    color: $gray-dark

  .guest-occupation
    font-size: 10px
    margin-top: 11px
    font-weight: 600

.tooltip-action
  position: absolute
  top: -35px
  right: -7px
  border-radius: 4px
  padding: 10px 0
  box-shadow: 2px 5px 20px $gray-medium
  height: 40px
  width: 100px
  font-size: 12px
  font-weight: 400
  text-align: center
  animation: fadeInDown ease 0.1s
  animation-iteration-count: 1
  transform-origin: 50% 50%
  animation-fill-mode: forwards
  &:hover
    text-decoration: underline

.arrow-down
  display: block
  width: 0
  height: 0
  border-top: 5px solid $white
  border-right: 5px solid transparent
  border-left: 5px solid transparent
  position: absolute
  right: 40px
  top: 5px
  animation: fadeInDown ease 0.1s


.guest-action-wrapper
  float: right

.guest-action
  display: table
  width: 100px
  button.guest-action-container
    float: right
    display: table-cell
    vertical-align: middle
    height: 56px
    width: 60px
    div
      display: none
      font-size: 11px
    svg
      width: 32px
      margin: 0 auto
    span
      position: absolute
      top: 27px
      right: 23px
      font-size: 20px
      color: $gray-medium
    svg.svg-badge
      width: 48px
    span.svg-qrcode
      right: 28px

//LOGS
#logs-container
  max-height: 79vh
  padding-top: 21px
  overflow-y: scroll
  overflow-x: hidden
  .guest-info
    margin-left: 15px
    width: 27%
    @include media(md)
      width: 28%

.log-info
  width: 20%
  border-right: 1px solid $gray-light

.log-time
  color: $black-light
  font-size: 30px
  font-weight: 800

.log-date
  color: $gray-medium
  font-size: 11px

#icon-badge
  width: 42px

//INVITATION
#invitation-container
  height: 85vh
  overflow: hidden
  padding: 40px 30px
  border-bottom: 1px solid $gray-light
  h1
    font-weight: 400

#invitation-header
  margin-bottom: 80px
  p
    color: $gray-dark

